# mformat

./: .gitignore  .pymarkdown  README.md  README_pypi.md  bestInstalledPython.zsh  clean.py  clean.zsh  cleanBuild.zsh  clean_build.py  createExampleReadme.py  create_example_readme.py  doBuild.zsh  doPypiBuild.zsh  do_build.py  do_pypi_build.py  handle_docx_changes.zsh  mypy.ini  pydoc-markdown_protected.yml  pytest.ini  run_build.py  run_clean.py  run_clean_build.py  run_pypi_build.py  run_setup_build_environment.py  run_wrapper_common.py  setup_build_environment.py  setup_build_environment.zsh
base/: README_pypi.md  README_pypi.md.org  pyproject.toml  setup.py
base/src/mformat/: __init__.py  document_class.py  enum_str_util.py  factory.py  mformat.py  mformat_html.py  mformat_latex.py  mformat_lists.py  mformat_lists_impl.py  mformat_md.py  mformat_plaintextlike.py  mformat_rst.py  mformat_state.py  mformat_textbased.py  mformat_txt.py  paper_size.py  plain_text_table.py  reg_pkg_formats.py  underline_text.py
base/test/test_mformat/: __init__.py  check_capsys.py  rst_test_helpers.py  test_document_class.py  test_enum_str_util.py  test_factory.py  test_helpers.py  test_mformat.py  test_mformat_core.py  test_mformat_html.py  test_mformat_html_core.py  test_mformat_html_lists.py  test_mformat_html_paragraph.py  test_mformat_html_table.py  test_mformat_impl_list_state.py  test_mformat_latex_core.py  test_mformat_latex_factory.py  test_mformat_lists.py  test_mformat_lists_impl.py  test_mformat_md.py  test_mformat_md_core.py  test_mformat_md_encode.py  test_mformat_md_lists.py  test_mformat_md_paragraph.py  test_mformat_md_table.py  test_mformat_paragraph.py  test_mformat_plaintextlike.py  test_mformat_rst_core.py  test_mformat_rst_factory.py  test_mformat_rst_lists.py  test_mformat_rst_paragraph.py  test_mformat_rst_table.py  test_mformat_table.py  test_mformat_textbased.py  test_mformat_txt_core.py  test_mformat_txt_factory.py  test_mformat_txt_lists.py  test_mformat_txt_paragraph.py  test_mformat_txt_table.py  test_paper_size.py  (+3 more)
build_helpers/: __init__.py  bestInstalledPython.zsh  best_installed_python.py  build_utils.py  create_example_readme.py  create_pypi_readme.py  git_restore_equiv_docx_odt.py  ignore_docx_changes.zsh  pydoc-markdown.yml  pydoc-markdown_protected.yml
custom_build_tools/: create_example_readme.py  create_pypi_readme.py  custom_spec.py  git_restore_equiv_docx_odt.py  hooks.py  run_examples.py
custom_build_tools/src/: create_example_readme.py  create_pypi_readme.py  git_restore_equiv_common.py  git_restore_equiv_docx_odt.py  git_restore_equiv_pdf.py  hooks.py  run_examples.py
doc/: README.md  api.md  protected_api.md
example/: README.md
example/css/: e41_styles.css
extend/: README_pypi.md  pyproject.toml  setup.py
extend/src/mformat_ext/: __init__.py  mformat_docx.py  mformat_odt.py  mformat_pdf.py  mformat_rtf.py  reg_extpkg_formats.py  rtf_codec.py
extend/test/test_mformat_ext/: __init__.py  test_exit_with_by_exception.py  test_file_already_exists.py  test_mformat_docx.py  test_mformat_docx_core.py  test_mformat_docx_lists.py  test_mformat_docx_paragraph.py  test_mformat_docx_table.py  test_mformat_odt_core.py  test_mformat_odt_lists.py  test_mformat_odt_paragraph.py  test_mformat_odt_table.py  test_mformat_pdf_core.py  test_mformat_rtf_core.py  test_reg_extpkg_formats.py  test_rtf_codec.py
(+329 files in other folders)
