[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mformat"
version = "0.7"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "Uniform way to write simple text to different file formats"
readme = "README_pypi.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]
dynamic = ["dependencies"]

[project.urls]
"Source code" = "https://github.com/tom-bjorkholm/mformat"
"Documentation" = "https://github.com/tom-bjorkholm/mformat/blob/master/doc/"
