[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mformat_ext"
version = "0.2.1"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "Uniform way to write simple text extended with DOCX and ODT files"
readme = "README_pypi.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Source code" = "https://bitbucket.org/tom-bjorkholm/mformat"
